# Nova_GuiViewer

./: .gitignore  .gitmodules  .gitmodules.orig  CMakeLists.txt  CMakeLists.txt.orig  Camera.h  Camera.h.orig  Doxyfile  ImGui_Wrapper.cpp  ImGui_Wrapper.cpp.orig  ImGui_Wrapper.h  ImGui_Wrapper.h.orig  OGL_Camera.h  OGL_ViewportManager.cpp  OGL_ViewportManager.h  OGL_World.cpp  OGL_World.h  ObjectRenderable.cpp  README  README.md  README.md.orig  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Sim_Object.cpp  Sim_Object.h  TriMesh.cpp  TriMesh.cpp.orig  TriMesh.h  TriMesh.h.orig  Viewer.cpp  Viewer.cpp.orig  Viewer.h  Viewer.h.orig  Viewport.cpp  Viewport.h  Viewport.h.bak  (+18 more)
plugin_GuiViewer/: CMakeLists.txt  Object_Renderable.h  main.cpp  main.cpp.bak
plugin_Gui_Viewer/: CMakeLists.txt  ImGui_Wrapper.cpp  ImGui_Wrapper.h  Object_Renderable.h  README.md  TriMesh.cpp  TriMesh.h  development_notes.md  guiviewer.conf  main.cpp.bak  shader.h  triangle.h
